# tw-timestamp

./: .gitignore  Cargo.toml  README.md  setup.cfg  setup.py  tw-timestamp.py
autoclip-tw-timestamp/: Cargo.toml
autoclip-tw-timestamp/src/: lib.rs
tw_timestamp/: __main__.py
