[metadata]
name = tw-timestamp
version = 0.1.0
description = Clipboard hook to convert copy pasted dates into TiddlyWiki format.
keywords = tiddlywiki, date, clipboard
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    python-dateutil >= 2.8.1
    pyperclip >= 1.8.2
    pytz >= 2021.3

[options.entry_points]
console_scripts =
    tw-timestamp = tw_timestamp.__main__:main
