[package]
name = "autoclip-tw-timestamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
autoclip-core = "0.1.0"
chrono = "0.4"
chrono-tz = "0.6"
dtparse = "1.3.0"
iana-time-zone = "0.1.50"
